Issue #24974: Force fp-model precice in mpdecimal.c on Windows

As suggested by Steve Dower and approved by Stefan Krah.